# DLBlas

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  import_test.py  pyproject.toml  requirements.txt  run_format.sh  setup.py  timechart_data.json
.github/workflows/: format.yaml
benchmarks/: apply_rotary_pos_emb.py  bench_fused_moe_v2.py  bench_layernorm.py  context_flashattention_nopad.py  fill_kv_cache.py  flash_attention_v2.py  fused_moe.py  fused_rotary_and_fa.py  grpo.py  layernorm_gated.py  matmul.py  megatron_gating.py  moe_align_block_size.py  moe_fused_gate.py  paged_attention.py  partial_rotary_emb.py  permute.py  rms_norm.py  selective_scan.py  selective_state_update.py  silu_and_mul.py  tma.py  topk_gating.py
benchmarks/ascend/: bench_ep_gather_scatter.py  bench_k_grouped_gemm.py  bench_m_grouped_gemm.py  bench_matmul.py  bench_matmul_relu.py  bench_matmul_v2.py  test_fused_linear_cross_entropy.py  test_grpo_loss.py  test_silu_and_mul_quant.py
benchmarks/camb/: apply_rotary_pos_emb.py  flash_attention_v2.py  fused_rotary_and_fa.py  grouped_gemm.py  layernorm_gated.py  matmul.py  partial_rotary_emb.py  partial_rotary_emb_megatron.py  selective_scan.py  selective_state_update.py  test_fused_linear_cross_entropy.py  test_utils.py  tma.py  topk_gating.py  topk_megatron_part2.py  topk_megatron_part3.py  yarn_ROPE_megatron.py  yarn_ROPE_withCSC.py
benchmarks/grouped_gemm/BF16/: k_grouped_gemm.py  m_grouped_gemm.py
benchmarks/maca/: fill_kv_cache.py  rms_norm.py  silu_and_mul.py
cmake/: utils.cmake
csrc/: activations.cu  cuda_compat.h  dispatch_utils.h  dlblas_ops.h  extension.cc  per_token_group_quant_8.cu  vec_dtypes.cuh
csrc/moe/: fused_gate.cu  moe_align_sum_kernels.cu
dlblas/: __init__.py  cache.py  op_registry.py  op_struct.py  symbolic_var.py
dlblas/autotune/: autotuner.py  configs.py  dynamic_compiler.py  passes.py  policy.py  space.py
dlblas/frontend/: fx_parser.py  fx_runnable_module_parser.py
dlblas/kernels/: __init__.py  activation.py  add_rms_norm.py  alibi_pagedattention.py  allgather_grpo_loss.py  apply_rotary_pos_emb.py  centre_random_augmentation.py  context_flashattention_nopad.py  cross_entropy.py  decode_attention.py  element_mul.py  engram.py  engram_cuda.py  extend_attention.py  ffn.py  fill_kv_cache.py  flash_attention.py  flash_attention_v2.py  flash_attn_varlen.py  fp8.py  fp8_gemm.py  frames_express_coordinates.py  fused_linear_cross_entropy.py  fused_lora.py  fused_moe.py  fused_moe_v2.py  fused_moe_v3.py  fused_rotary_and_fa.py  fused_rotary_emb.py  grouped_gemm.py  grpo_compute_loss_logits.py  grpo_loss.py  l2norm.py  layernorm_gated.py  lighting_indexer.py  lightning_attn.py  matmul.py  mbgmm.py  mbgmv.py  moe.py  (+21 more)
dlblas/kernels/ai4s/: relative_position_encoding.py
dlblas/kernels/ascend/: apply_rotary_pos_emb.py  deepseek_v3_mla_prolog.py  deepseek_v3_mla_prolog_v2.py  fa_task2_vector4.py  fourd_matrix_multiply.py  fourier_pos_emb.py  fused_moe_v3.py  fused_rms_norm_rope.py  fused_rmsnorm_partial_rope.py  gemm_scale_bn.py  k_grouped_gemm.py  lightning_attn.py  m_grouped_gemm.py  m_grouped_matmul.py  matmul.py  matmul_v2.py  qwen3_next_atten_prolog.py  qwen3_next_atten_prolog_v1.py  qwen3_next_atten_prolog_v2.py  rms_norm.py  sink_attention.py  three_matrix_multiply.py
dlblas/kernels/camb/: grouped_gemm.py  matmul.py  partial_rotary_emb.py  partial_rotary_emb_megatron.py  selective_scan.py  topk_gating.py  topk_gating_fwd_part3.py  yarn_ROPE.py  yarn_ROPE_withCSC.py
dlblas/kernels/context_flahsattention/: benchmark_results.csv  context_flashattention.py  context_flashattention_vllm.py  context_flashattention_vllm_test.py
dlblas/kernels/context_flashattention/: context_flashattention_test.py
dlblas/kernels/cuda/: permute.cu  permute.h  test.py
dlblas/kernels/cutlass/: fp8_convert.cu  fp8_convert.cuh
dlblas/kernels/grouped_gemm/: __init__.py
dlblas/kernels/layer_norm/: __init__.py  layernorm_normal.py  layernorm_normal_loop.py  layernorm_opt.py  layernorm_opt_2D.py  layernorm_opt_mask.py  layernorm_opt_mask_2D_tma.py  layernorm_torch.py
dlblas/kernels/paged_decode_attention/: paged_deocde_attention.py  paged_deocde_attention_test.py
dlblas/kernels/permute/: moe_triton_kernels.py
dlblas/layers/: README.md
dlblas/layers/moe/: __init__.py  ep_moe.py  eplb.py  experts_distribution_recorder.py  token_dispatcher.py  token_dispatcher_base.py
dlblas/transformers/: functional.py  fused_linear_cross_entropy.py
dlblas/utils/: __init__.py  device_utils.py  libentry.py  logger.py  moe_utils.py  op_collector.py  op_helper.py  utils.py
docs/: supported_models.md
examples/moe/: 1.8B_MoE64.py  README.md  srun_moe.sh  train_moe.sh
requirements/: cuda.txt
scripts/: ci_python_black.sh
tests/: play_faketensor.py  play_regex.py  play_sympy.py  play_z3.py  test_cache.py  test_dlblas_fused_moe_blocked_fp8.py  test_dlblas_get_sorted_idx.py  test_kernels.py  test_registry.py  test_space.py  test_symbolic_var.py  utils.py
tests/e2e/test_lmdeploy/: checkpoint.json  checkpoint_throughput.json  test_model.py  test_model_batch.py  test_model_config.yaml  test_model_once.py  test_throughput_batch.py  (+1 more)
tests/kernels/: test_activation.py  test_add_rms_norm.py  test_allgather_grpo_loss.py  test_apply_rotary.py  test_attention_kernels.py  test_centre_random_augmentation.py  test_context_flashattention_nopad.py  test_eplb.py  test_fill_kv_cache.py  test_fp8_gemm.py  test_frames_express_coordinates.py  test_fused_linear_cross_entropy.py  test_fused_lora.py  test_fused_moe.py  test_fused_moe_v2.py  test_fused_rotary_emb.py  test_grouped_gemm.py  test_grpo_loss.py  test_grpo_loss_logits.py  test_layer_norm.py  test_layernorm_gated.py  test_lighting_indexer.py  test_lightning_attn.py  test_moe_fused_gate.py  test_multinomial_sampling.py  test_paged_attention.py  test_prefill_attention.py  test_quant_dequant.py  test_relative_position_encoding.py  test_rms_norm.py  test_scatter_gather.py  test_selective_state_update.py  test_sparse_mla.py
(+255 files in other folders)
