[build-system]
requires = [
    "cmake>=3.26",
    "ninja",
    "packaging",
    "setuptools>=61",
    "setuptools-scm>=8.0",
    "wheel",
    "jinja2",
]
build-backend = "setuptools.build_meta"


[project]
name = "dlblas"
authors = [{name = "dlblas Team"}]
license = { "file"= "LICENSE" }
readme = "README.md"
description = "dlblas"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9,<3.13"
dynamic = [ "version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage="https://github.com/DeepLink-org/dlBLAS"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["benchmarks", "csrc", "examples", "tests*"]
namespaces = false
