[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlblas"
authors = [{name = "dlblas Team"}]
license = { "file"= "LICENSE" }
readme = "README.md"
description = "dlblas"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dynamic = [ "version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage="https://github.com/DeepLink-org/DLBlas"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["benchmarks", "csrc", "examples"]
namespaces = false
